fixed text spacing for phone view

--- a/styles.css
+++ b/styles.css
@@ -40,20 +40,6 @@ body {
     min-height: 320px;
   }
 
-  /* .title {
-    border: 10px solid red;
-    font-size: 1.35em !important;
-  }
-
-  .noIcon-title {
-    font-size: 1.35em !important;
-  }
-
-  .project-icon {
-    width: 10px;
-    border: solid 10px mistyrose;
-  } */
-}
 @media (max-width: 700px) {
   .project-container {
     display: flex;
@@ -65,6 +51,28 @@ body {
   .project-item {
     width: calc(100% - 20px);
     max-width: 600px;
+  }
+  .title {
+    font-size: 1.2em !important;
+    margin-top: 45px !important;
+  }
+  .noIcon-title{
+    font-size: 1.2em !important;
+    margin-top: 95px !important;
+  }
+
+
+  .noIcon-project-icon {
+    max-width: 65px;
+    margin-top: 50px;
+  }
+  
+  .project-icon {
+    max-width: 65px;
+  }
+
+  .noIcon-title {
+    font-size: 1.5em;
   }
 }
 
